# circuitpython-sync

./: README.md  __main__.py  pyproject.toml
src/circuitpython_sync/: __init__.py  __main__.py
